--- a/module07/pom.xml
+++ b/module07/pom.xml
@@ -22,5 +22,10 @@
             <artifactId>spring-web</artifactId>
             <version>3.0.2.RELEASE</version>
         </dependency>
+        <dependency>
+    		<groupId>com.google.code.gson</groupId>
+    		<artifactId>gson</artifactId>
+    		<version>2.10.1</version>
+		</dependency>
     </dependencies>
 </project>
