--- a/module11/pom.xml
+++ b/module11/pom.xml
@@ -61,6 +61,11 @@
             <artifactId>log4j-core</artifactId>
             <version>2.22.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+            <version>3.2.1</version>
+        </dependency>
 
 
     </dependencies>
