--- a/module12/pom.xml
+++ b/module12/pom.xml
@@ -55,6 +55,15 @@
             <artifactId>log4j-core</artifactId>
             <version>2.22.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-config</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>6.2.0</version>
+        </dependency>
     </dependencies>
 
     <build>
